--- a/src/main/resources/assets/tetrapak/lang/en_us.json
+++ b/src/main/resources/assets/tetrapak/lang/en_us.json
@@ -3,6 +3,17 @@
   "tetra.material.refined_radiance.prefix": "Refined Radiance",
   "tetra.material.shadow_steel": "Shadow Steel",
   "tetra.material.shadow_steel.prefix": "Shadow Steel",
+  "tetra.material.andesite_alloy": "Andesite Alloy",
+  "tetra.material.andesite_alloy.prefix": "Andesite Alloy",
+  "tetra.material.brass": "Brass",
+  "tetra.material.brass.prefix": "Brass",
+
+  "tetra.variant.double_socket/rose_quartz": "Socket [\u00a7cRose Quartz\u00a7r]",
+  "tetra.variant.double_socket/rose_quartz.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and grants the wielder additional reach.",
+  "tetra.variant.single_socket/rose_quartz": "Socket [\u00a7cRose Quartz\u00a7r]",
+  "tetra.variant.single_socket/rose_quartz.description": "A gem, attached where the head meets the handle. The gem is enchanted and grants the wielder additional reach.",
+  "tetra.variant.sword_socket/rose_quartz": "Socket [\u00a7cRose Quartz\u00a7r]",
+  "tetra.variant.sword_socket/rose_quartz.description": "A gem, fitted onto the sword where the blade meets the hilt. The gem is enchanted and grants the wielder additional reach.",
 
   "tetra.improvement.tetrapak/deforesting.name": "Deforesting",
   "tetra.improvement.tetrapak/deforesting.description": "The latent energy of Refined Radiance allows this tool to fell trees with ease.",
