Experiment a bit with Refined Radiance polymorphism: by defining the Radiant effect separately for different tool head, they can point to different effects. For now, the only one of these effects with any code behind it is Deforesting.

--- a/src/main/resources/assets/tetrapak/lang/en_us.json
+++ b/src/main/resources/assets/tetrapak/lang/en_us.json
@@ -26,11 +26,11 @@
   "tetra.improvement.tetrapak/voiding.description": "The void powers infused into Shadow Steel give this tool incredible power at the cost of converting ALL drops to experience. Fortune and Looting both increase dropped experience.",
 
   "tetrapak.stats.voiding": "Voiding",
-  "tetrapak.stats.voiding.tooltip": "This tool will void the drops of blocks mined and mobs killed with it in exchange for experience.",
+  "tetrapak.stats.voiding.tooltip": "This tool will void the drops of blocks mined and mobs killed with it in exchange for experience. Scales with fortune and looting.",
 
   "tetrapak.stats.deforesting": "Deforesting",
   "tetrapak.stats.deforesting.tooltip": "This tool will chop down any tree in a single swing.",
 
   "tetrapak.stats.nullifying": "Nullifying",
-  "tetrapak.stats.nullifying.tooltip": "Wearing this belt will reduce gravity experienced the wearer by \u00a7e%s\u00a7r."
+  "tetrapak.stats.nullifying.tooltip": "Wearing this belt will reduce gravity experienced the wearer by \u00a7e%s\u00a7r"
 }
