--- a/src/main/resources/assets/tetrapak/lang/en_us.json
+++ b/src/main/resources/assets/tetrapak/lang/en_us.json
@@ -31,6 +31,13 @@
   "tetra.variant.sword_socket/moonstone": "Socket [\u00a7bMoonstone\u00a7r]",
   "tetra.variant.sword_socket/moonstone.description": "A gem, fitted onto the sword where the blade meets the hilt. The gem is enchanted and grants the sword increased damage depending on moon phase.",
 
+  "tetra.variant.double_socket/rockroot": "Socket [\u00a77Rockroot\u00a7r]",
+  "tetra.variant.double_socket/rockroot.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and grants the tool the ability to slowly repair itself over time.",
+  "tetra.variant.single_socket/rockroot": "Socket [\u00a77Rockroot\u00a7r]",
+  "tetra.variant.single_socket/rockroot.description": "A gem, attached where the head meets the handle. The gem is enchanted and grants the tool the ability to slowly repair itself over time.",
+  "tetra.variant.sword_socket/rockroot": "Socket [\u00a77Rockroot\u00a7r]",
+  "tetra.variant.sword_socket/rockroot.description": "A gem, fitted onto the sword where the blade meets the hilt. The gem is enchanted and grants the sword the ability to slowly repair itself over time.",
+
   "tetra/schematic/toolbelt/nullifier.slot1": "Material",
   "tetra/schematic/toolbelt/nullifier.name": "Nullifier",
   "tetra/schematic/toolbelt/nullifier.description": "Attach a gravity nullification unit, which lowers the gravity experienced by the belt's wearer. As a side-effect of this, fall damage is also completely nullified.",
@@ -53,5 +60,8 @@
   "tetrapak.stats.nullifying.tooltip": "Wearing this belt will reduce gravity experienced the wearer by \u00a7e%s\u00a7r",
 
   "tetrapak.stats.moonstrike": "Moonstrike",
-  "tetrapak.stats.moonstrike.tooltip": "This tool will deal \u00a7e%s%%\u00a7r bonus damage and break blocks \u00a7e%s%%\u00a7r faster on a full moon. Lesser bonuses apply for intermediate moon phases."
+  "tetrapak.stats.moonstrike.tooltip": "This tool will deal \u00a7e%s%%\u00a7r bonus damage and break blocks \u00a7e%s%%\u00a7r faster on a full moon. Lesser bonuses apply for intermediate moon phases.",
+
+  "tetrapak.stats.regrowth": "Regrowth",
+  "tetrapak.stats.regrowth.tooltip": "This tool will repair itself by \u00a7e1%%\u00a7r of the total durability every \u00a7e%s\u00a7r seconds\n\n\u00a77In total, it will take around \u00a7e%s \u00a77minutes for the tool to fully repair"
 }
