--- a/src/main/resources/assets/tetrapak/lang/en_us.json
+++ b/src/main/resources/assets/tetrapak/lang/en_us.json
@@ -40,12 +40,12 @@
 
   "tetra/schematic/toolbelt/nullifier.slot1": "Material",
   "tetra/schematic/toolbelt/nullifier.name": "Nullifier",
-  "tetra/schematic/toolbelt/nullifier.description": "Attach a gravity nullification unit, which lowers the gravity experienced by the belt's wearer. As a side-effect of this, fall damage is also completely nullified",
+  "tetra/schematic/toolbelt/nullifier.description": "Attach a gravity nullification unit, which lowers the gravity experienced by the belt's wearer. As a side-effect of this, fall damage is also completely nullified.",
   "tetra.variant.nullifier/refined_radiance": "Gravity nullifier",
 
   "tetra/schematic/toolbelt/mooncatcher.slot1": "Material",
   "tetra/schematic/toolbelt/mooncatcher.name": "Mooncatcher",
-  "tetra/schematic/toolbelt/mooncatcher.description": "Attach a mooncatcher, allowing you to see better under the moonlight. This module will have no effect when moonlight is not present, such as during new moons or when underground",
+  "tetra/schematic/toolbelt/mooncatcher.description": "Attach a mooncatcher, allowing you to see better under the moonlight. This module will have no effect when moonlight is not present, such as during new moons or when underground.",
   "tetra.variant.mooncatcher/moonstone": "Mooncatcher",
 
   "tetra.improvement.tetrapak/radiant.name": "Radiant",
