--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+Version 0.2.2
+    Improvements and fixes:
+        TBD
+
 Version 0.2.1
     Improvements and fixes:
         Refined Radiance modules will now receive their proper effects when crafted.
