--- a/src/main/resources/assets/tetrapak/lang/en_us.json
+++ b/src/main/resources/assets/tetrapak/lang/en_us.json
@@ -16,11 +16,11 @@
   "tetra.variant.sword_socket/rose_quartz": "Socket [\u00a7cRose Quartz\u00a7r]",
   "tetra.variant.sword_socket/rose_quartz.description": "A gem, fitted onto the sword where the blade meets the hilt. The gem is enchanted and grants the wielder additional reach",
   "tetra.variant.double_socket/refined_radiance": "Socket [\u00a7fRefined Radiance\u00a7r]",
-  "tetra.variant.double_socket/refined_radiance.description": "A gem, fitted onto the side of the tool head. The gem is light and will make drops float",
+  "tetra.variant.double_socket/refined_radiance.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and will make drops float",
   "tetra.variant.single_socket/refined_radiance": "Socket [\u00a7fRefined Radiance\u00a7r]",
-  "tetra.variant.single_socket/refined_radiance.description": "A gem, attached where the head meets the handle. The gem is light and will make drops float",
+  "tetra.variant.single_socket/refined_radiance.description": "A gem, attached where the head meets the handle. The gem is enchanted and will make drops float",
   "tetra.variant.sword_socket/refined_radiance": "Socket [\u00a7fRefined Radiance\u00a7r]",
-  "tetra.variant.sword_socket/refined_radiance.description": "A gem, fitted onto the sword where the blade meets the hilt. The gem is light and will make drops float",
+  "tetra.variant.sword_socket/refined_radiance.description": "A gem, fitted onto the sword where the blade meets the hilt. The gem is enchanted and will make drops float",
   "tetra.variant.double_socket/fiery_glass": "Socket [\u00a76Fiery Glass\u00a7r]",
   "tetra.variant.double_socket/fiery_glass.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and will scorch anything the tool touches",
   "tetra.variant.single_socket/fiery_glass": "Socket [\u00a76Fiery Glass\u00a7r]",
@@ -56,7 +56,7 @@
   "tetrapak.stats.voiding": "Voiding",
   "tetrapak.stats.voiding.tooltip": "This tool will void the drops of blocks mined and mobs killed with it in exchange for experience\n\n\u00a7ex%s \u00a77mob kill experience multiplier\n\u00a7ex%s \u00a77block experience multiplier",
   "tetrapak.stats.floating": "Floating",
-  "tetrapak.stats.floating.tooltip": "This tool defeats gravity, making drops float",
+  "tetrapak.stats.floating.tooltip": "This tool defies gravity, causing both drops gathered by the tool and the tool itself to float",
   "tetrapak.stats.deforesting": "Deforesting",
   "tetrapak.stats.deforesting.tooltip": "This tool will chop down any tree in a single swing",
   "tetrapak.stats.collapsing": "Collapsing",
