--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+Version 0.2.3
+    Improvements and fixes:
+        The moonstrike-related server crash has been fixed.
+        Hard blocks now give the correct amount of experience when mined with a shadow steel tool.
+
 Version 0.2.2
     New content:
         Refined Radiance can now be used as a socket, causing both drops and the tool itself to float in midair!
